Remove large XLS from tracking

--- a/visualization/transitions-vis/.gitignore
+++ b/visualization/transitions-vis/.gitignore
@@ -21,3 +21,6 @@ Thumbs.db
 # Vite
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Custom large file
+static/data/label-transition/scholawrite_train.xls
